Kept module-info clean of the benchmark's management beans
The benchmark now reaches RuntimeMXBean and com.sun.management.ThreadMXBean
reflectively, degrading to "n/a" and -1 when absent, so the product module
no longer requires java.management and jdk.management for a test-only
purpose. Both modules resolve without flags under Surefire and on a plain
class path, where the booter makes java.se a root; only the Eclipse launch,
whose root is the application module, names them with --add-modules.

The harness also builds a fresh GrammarModel and Grammar for every run,
outside the timed region: Factory's dependency tracking retains every rule
application on the Rule objects (about 1.4 KB each, never released), and
GrammarModel and RuleModel cache their compiled objects, so a fresh model
is the only unit that isolates runs from the leak of the previous ones.
Search plans are consequently built inside the timed region on every run;
milliseconds against seconds, equal for all runs.